hefty changes to style.css and index.html.

--- a/index.html
+++ b/index.html
@@ -23,20 +23,55 @@
     </header>
 
     <main>
-        <section id="Projects">
-            <h2>Projects</h2>
-            <p>Details about projects will go here.</p>
-        </section>
+        <div class="contentSection">
+            <section id="Projects" class="mainSection">
+                <h2>Skills</h2>
+                <div class="skillsList">
+                    <div class="skills-lists-row">
+                        <div>
+                            <h3>Technical Skills</h3>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>Git</li>
+                                <li>Java</li>
+                                <li>C++</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Soft Skills</h3>
+                            <ul>
+                                <li>Teamwork</li>
+                                <li>Problem-solving</li>
+                                <li>Creativity</li>
+                                <li>Time Management</li>
+                                <li>Eye for Detail</li>
+                                <li>Team Player</li>
+                                <li>Goal Orientated</li>
+                                <li>Communication</li>
+                                <li>Self Reflection</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="Skills" class="mainSection">
+                <div class ="projectsList">
+                    <h2>Projects</h2>
+                    <ul>
+                        <li>Project 1</li>
+                        <li>Project 2</li>
+                        <li>Project 3</li>
+                    </ul>
+                </div>
+            </section>
 
-        <section id="Skills">
-            <h2>Skills</h2>
-            <p>Details about skills will go here.</p>
-        </section>
-
-        <section id="Contact">
-            <h2>Contact</h2>
-            <p>Contact information will go here.</p>
-        </section>
+            <section id="Contact" class="mainSection">
+                <h2>Contact</h2>
+                <p>Contact will follow soon.</p>
+            </section>
+        </div>
     </main>
     <footer>
     </footer>
