--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="#Projects">Projects</a></li>
                     <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
