--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="headcontent">
-            <h1>LUKE ZIEGLER MOCK CURRICULUM VITAE</h1>
+            <h1 id="mainTitle">LUKE ZIEGLER MOCK CURRICULUM VITAE</h1>
             <nav>
                 <ul>
                     <li><a href="#Projects">Projects</a></li>
@@ -75,6 +75,6 @@
     </main>
     <footer>
     </footer>
+    <script src="resources/javascript/script.js"></script>
 </body>
-
 </html>
